src/objects/Developer_Work__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Per_Hour__c</fullName>
        <label>Cost Per Hour</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Developing_cost__c</fullName>
        <formula>Cost_Per_Hour__c *  Number_of_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developing cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Hours__c</fullName>
        <label>Number of Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Developer Work</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Developer Work</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developer Works</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>